--- a/index.html
+++ b/index.html
@@ -18,126 +18,158 @@
   </head>
 
   <body>
-    <header>
+    <header class="page-header">
       <nav>
-        <a href="#">Web Studio</a>
-        <ul>
-          <li><a href="#" target="_blank"></a>Estudio</li>
-          <li><a href="#" target="_blank"></a>Portafolio</li>
-          <li><a href="#" target="_blank"></a>Contactos</li>
+        <a class="logo" href="index.html">Web Studio</a>
+        <ul class="nav-menu">
+          <li>
+            <a class="page current" href="index.html" rel="noopener noreferrer"
+              >Estudio</a
+            >
+          </li>
+          <li>
+            <a class="page" href="portfolio.html" rel="noopener noreferrer"
+              >Portafolio</a
+            >
+          </li>
+          <li>
+            <a class="page" href="#" rel="noopener noreferrer">Contactos</a>
+          </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+525555296000">+52 55 55 29 60 00</a>
+      <ul class="contact-menu">
+        <li>
+          <a class="link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="link" href="+525555296000">+52 55 55 29 60 00</a>
+        </li>
+      </ul>
     </header>
     <main>
-      <section>
-        <h1>soluciones eficaces para su negocio</h1>
-        <button type="button">solicite nuestro servicio</button>
+      <section class="hero bg-hero">
+        <h1 class="hero-title">soluciones eficaces para su negocio</h1>
+        <button class="button-primary" type="button">
+          solicite nuestro servicio
+        </button>
+      </section>
+      <section class="section">
+        <div class="container">
+          <ul class="feature list">
+            <li>
+              <h3 class="title">atencion a los detalles</h3>
+              <p class="desciption">
+                Nos adentramos en todos los detalles y procesos de su negocio,
+                para así desarrollar una solución a su medida.
+              </p>
+            </li>
+
+            <li>
+              <h3 class="title">puntualidad</h3>
+              <p class="desciption">
+                Con nosotros, usted puede sentirse seguro y protegido. Un
+                principio importante de la empresa: respetar su tiempo y
+                respetar los plazos acordados.
+              </p>
+            </li>
+
+            <li>
+              <h3 class="title">planificacion</h3>
+              <p class="desciption">
+                Usted podrá observar y participar en cada fase del desarrollo y
+                aplicación de soluciones.
+              </p>
+            </li>
+
+            <li>
+              <h3 class="title">tecnologia moderna</h3>
+              <p class="desciption">
+                Usamos herramientas innovadoras para resolver las tareas
+                asignadas. Es hora de simplificar los procesos laborales.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section>
-        <h2>nuestras ventajas</h2>
-        <ul>
-          <li>
-            <h3>atencion a los detalles</h3>
-            <p>
-              Nos adentramos en todos los detalles y procesos de su negocio,
-              para así desarrollar una solución a su medida.
-            </p>
-          </li>
+      <section class="section what-we-do-section">
+        <h2 class="section-title">a que nos dedicamos</h2>
+        <div class="container">
+          <ul>
+            <li>
+              <img
+                src="images/img_01.jpg"
+                width="373"
+                alt="typing on keyboard"
+              />
+            </li>
 
-          <li>
-            <h3>puntualidad</h3>
-            <p>
-              Con nosotros, usted puede sentirse seguro y protegido. Un
-              principio importante de la empresa: respetar su tiempo y respetar
-              los plazos acordados.
-            </p>
-          </li>
+            <li>
+              <img src="images/img_02.jpg" width="373" alt="checking phone" />
+            </li>
 
-          <li>
-            <h3>planificacion</h3>
-            <p>
-              Usted podrá observar y participar en cada fase del desarrollo y
-              aplicación de soluciones.
-            </p>
-          </li>
-
-          <li>
-            <h3>tecnologia moderna</h3>
-            <p>
-              Usamos herramientas innovadoras para resolver las tareas
-              asignadas. Es hora de simplificar los procesos laborales.
-            </p>
-          </li>
-        </ul>
+            <li>
+              <img
+                src="images/img_03.jpg"
+                width="373"
+                alt="Looking at the design"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section>
-        <h2>a que nos dedicamos</h2>
-        <ul>
-          <li>
-            <img src="images/img_1.jpg" width="373" alt="typing on keyboard" />
-          </li>
+      <section class="section our-team">
+        <h2 class="section-title">nuestro equipo</h2>
+        <div class="container">
+          <ul class="team">
+            <li>
+              <img src="images/team_01.jpg" width="270" alt="first Member" />
+              <h3>Andres Cubo</h3>
+              <p>Diseñador de Productos</p>
+            </li>
 
-          <li>
-            <img src="images/img_2.jpg" width="373" alt="checking phone" />
-          </li>
+            <li>
+              <img src="images/team_02.jpg" width="270" alt="second Member" />
+              <h3>Carla Palacios</h3>
+              <p>Desarroladora Frontend</p>
+            </li>
 
-          <li>
-            <img
-              src="images/img_3.jpg"
-              width="373"
-              alt="Looking at the design"
-            />
-          </li>
-        </ul>
-      </section>
+            <li>
+              <img src="images/team_03.jpg" width="270" alt="third Member" />
+              <h3>Mario Dorado</h3>
+              <p>Marketing</p>
+            </li>
 
-      <section>
-        <h2>nuestro equipo</h2>
-        <ul>
-          <li>
-            <img src="images/team_1.jpg" width="270" alt="first Member" />
-            <h3>andres cubo</h3>
-            <p>diseñador de productos</p>
-          </li>
-
-          <li>
-            <img src="images/team_2.jpg" width="270" alt="second Member" />
-            <h3>carla palacios</h3>
-            <p>desarroladora frontend</p>
-          </li>
-
-          <li>
-            <img src="images/team_3.jpg" width="270" alt="third Member" />
-            <h3>mario dorado</h3>
-            <p>marketing</p>
-          </li>
-
-          <li>
-            <img src="images/team_4.jpg" width="270" alt="fourth Member" />
-            <h3>pablo mjangos</h3>
-            <p>diseñador ui</p>
-          </li>
-        </ul>
+            <li>
+              <img src="images/team_04.jpg" width="270" alt="fourth Member" />
+              <h3>Pablo Mjangos</h3>
+              <p>Diseñador UI</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer>
-      <a href="">Web Studio</a>
-      <address>
+    <footer class="footbar">
+      <a class="logo" href="">Web Studio</a>
+      <address class="footer-links">
         <ul>
           <li>
-            <a href="#" target="_blank">Calz.Ticomán 500, Ciudad de México </a>
+            <a class="contact" href="#" target="_blank"
+              >Calz.Ticomán 500, Ciudad de México
+            </a>
           </li>
 
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a class="contact" href="mailto:info@example.com"
+              >info@example.com</a
+            >
           </li>
 
           <li>
-            <a href="tel:+525555296000 ">+525555296000</a>
+            <a class="contact" href="tel:+525555296000 ">+525555296000</a>
           </li>
         </ul>
       </address>
