--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </section>
 
       <section class="section what-we-do-section">
-        <h2 class="section-title">a que nos dedicamos</h2>
+        <h2 class="section-title">A que nos dedicamos</h2>
         <div class="container">
           <ul>
             <li>
